bitbybit/tests/no_compile/missing_fields_in_builder.stderr
error[E0599]: no method named `build` found for struct `PartialTest<Set_foo, Unset_bar>` in the current scope
  --> tests/no_compile/missing_fields_in_builder.rs:12:33
   |
3  | #[bitfield(u32, default = 0, forbid_overlaps)]
   | ---------------------------------------------- method `build` not found for this struct
...
12 |     Test::builder().with_foo(1).build();
   |                                 ^^^^^ method not found in `PartialTest<Set_foo, Unset_bar>`
   |
   = note: the method was found for
           - `PartialTest<Set_foo, Set_bar>`

error[E0599]: no method named `build` found for struct `PartialTest<Unset_foo, Set_bar>` in the current scope
  --> tests/no_compile/missing_fields_in_builder.rs:13:33
   |
3  | #[bitfield(u32, default = 0, forbid_overlaps)]
   | ---------------------------------------------- method `build` not found for this struct
...
13 |     Test::builder().with_bar(1).build();
   |                                 ^^^^^ method not found in `PartialTest<Unset_foo, Set_bar>`
   |
   = note: the method was found for
           - `PartialTest<Set_foo, Set_bar>`

error[E0599]: no method named `set_foo` found for struct `PartialTest` in the current scope
  --> tests/no_compile/missing_fields_in_builder.rs:14:33
   |
3  | #[bitfield(u32, default = 0, forbid_overlaps)]
   | ---------------------------------------------- method `set_foo` not found for this struct
...
14 |     Test::builder().with_bar(1).set_foo(1).build();
   |                                 ^^^^^^^ method not found in `PartialTest<Unset_foo, Set_bar>`
   |
help: one of the expressions' fields has a method of the same name
   |
14 |     Test::builder().with_bar(1).value.set_foo(1).build();
   |                                 ++++++
